--- a/style.css
+++ b/style.css
@@ -1,1 +1,67 @@
 @charset "UTF-8";
+
+
+* {
+    margin: 0px;
+    padding: 0px;
+}
+
+html, body {
+    background-color: darkgray;
+    min-height: 100vh;
+}
+
+header {
+    background-color: black;
+    color: white;
+    text-align: center;
+}
+
+header > h1 {
+    padding: 50px;
+    font-variant: small-caps;
+}
+
+header > p {
+    padding-bottom: 50px;
+}
+
+header a, footer a  {
+    color: white;
+    text-decoration: none;
+    font-weight: bolder;
+}
+
+
+header a:hover, footer a:hover {
+    text-decoration: underline;
+}
+
+section {
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    line-height: 2em;
+    padding-left: 22px;
+}
+
+section.normal {
+    background-color: white;
+    color: black;   
+}
+
+section.imagem {
+    background-color: rgb(65, 60, 60);
+    color: white;
+}
+
+section.imagem > p {
+    background-color: rgb(0, 0, 0, 0.252);
+    width: 400px;
+}
+
+footer {
+    background-color: black;
+    text-align: center;
+    color: white;
+    padding: 10px;
+}
